# personal_project

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  compile_and_run.sh  debug.sh  execute.sh  main.cpp  run.sh
.github/workflows/: cpp-build-lint.yml  pipeline.yml
cmake/: CMakeLists.txt  execute.sh
examples/attitude_filter/apps/: data_bus.hpp  gyro_sim_app.hpp  gyro_sim_interface.hpp  logging_sim_app.hpp
examples/attitude_filter/config_files/: app_priorities.yaml  gyro_config.yaml  logging_config.yaml  sim_and_logging_config.yaml  simulation_config.yaml
examples/attitude_filter/post_processing/: plot_results.py
examples/attitude_filter/post_processing_scripts/: plot_results.py
examples/attitude_filter/sim_apps/: gyro_sim_interface.hpp  logger_sim_interface.hpp
math/matrix/: matrix.hpp  matrix_advanced_math.hpp  matrix_constructors.hpp  matrix_creators.hpp  matrix_declarations.hpp  matrix_simple_math.hpp  matrix_utilities.hpp  readme.txt
math/quaternion/: quat_constructors.hpp  quat_declarations.hpp  quat_math.hpp  quat_utilities.hpp  readme.txt
math/rotation_vector/: readme.txt  rot_vec_constructors.hpp  rot_vec_declarations.hpp  rot_vec_utilities.hpp
math/transforms/: readme.txt  to_quat.inl  to_rot_vec.inl  to_rotation_matrix.inl  to_transformation_matrix.inl  transforms.hpp
math/vector/: readme.txt  vector.hpp  vector_constructors.hpp  vector_declarations.hpp  vector_simple_math.hpp  vector_utilities.hpp
projects/attitude_filter/: run_attitude_filter.hpp
projects/attitude_filter/config_files/: app_priorities_and_rates.yaml  attitude_filter_config.yaml  fake_dynamics_config.yaml  gyro_config.yaml  sim_and_logging_config.yaml  star_tracker_config.yaml
projects/attitude_filter/models/: gyro_model.cpp  gyro_model.hpp  struct_defs.hpp
projects/attitude_filter/post_processing/: plot_all_results.py  plot_attitude_filter.py  plot_gyro_data.py  plot_results.py  plot_star_tracker_data.py  plot_true_dynamics.py
projects/attitude_filter/sim_files/: attitude_filter_sim_app.hpp  data_bus.hpp  fake_dynamics_sim_app.hpp  gyro_sim_app.hpp  logging_sim_app.hpp  star_tracker_sim_app.hpp
sim_framework/: sim_includes.hpp
sim_framework/data_logging/: cpp_to_hdf5_type_mapping.hpp  dataset_overrides.hpp  dataset_overrides.tpp  hdf5_mutex.hpp  hdf5_to_cpp_type_mapping.cpp  hdf5_to_cpp_type_mapping.hpp  logger.cpp  logger.hpp  logger.tpp  logger_config.hpp  read_hdf5_data.hpp
sim_framework/generic_apps/: logging_app_base.hpp  logging_facade.hpp  sim_app_base.cpp  sim_app_base.hpp  sim_app_base.tpp
sim_framework/messaging/: connection_yaml.cpp  connection_yaml.hpp  io_registry.cpp  io_registry.hpp  io_registry.tpp
sim_framework/sim_core/: console_mutex.hpp  sim_config.hpp  sim_control.hpp  sim_data_logger.cpp  sim_data_logger.hpp  sim_dispersions.cpp  sim_dispersions.hpp  sim_manager.cpp  sim_manager.hpp  sim_manager.tpp  sim_single_run.cpp  sim_single_run.hpp  sim_single_run.tpp  sim_structs.hpp  simulation.hpp  simulation.tpp
sim_framework/telemetry/: recorder.cpp  recorder.hpp
src/: main.cpp  test.yaml
src/config_files/: gyro_config.yaml  simulation_config.yaml
src/data_logger/: add_dataset.hpp  add_sim_dataset.hpp  data_read_write_utilities.hpp  hdf5_logger.cpp  hdf5_logger.hpp
src/data_logging/: cpp_to_hdf5_type_mapping.hpp  dataset_base.hpp  dataset_overrides.hpp  dataset_overrides.tpp  hdf5_to_cpp_type_mapping.cpp  logger.cpp  logger.hpp  logger.tpp  logging_utilities.cpp  logging_utilities.hpp  read_hdf5_data.hpp
src/logger/: add_dataset.hpp  add_sim_dataset.hpp  cpp_to_hdf5_type_mapping.hpp  data_read_write_utilities.hpp  hdf5_logger.cpp  hdf5_logger.hpp
src/math/: math.hpp
src/math/matrix/: matrix_utilities.hpp  readme.txt
src/math/quaternion/: quat.hpp  quat_math.hpp
src/math/rotation_vector/: rot_vec_constructors.hpp  rot_vec_declarations.hpp
src/math/transforms/: readme.txt  to_rotation_matrix.inl  to_transformation_matrix.inl
src/math/vector/: vector_constructors.hpp  vector_utilities.hpp
src/math_utilities/: matrix2D.hpp  matrix_advanced_math.hpp  matrix_declarations.hpp  matrix_simple_math.hpp  matrix_utilities.hpp  readme.txt  vector.hpp
src/sim_data_logger/: cpp_to_hdf5_type_mapping.hpp  data_logging_base.hpp  dataset_base.hpp  dataset_overrides.hpp  dataset_overrides.tpp  logging_utilities.cpp  logging_utilities.hpp  sim_logging_manager.cpp  sim_logging_manager.hpp
src/sim_framework/: data_bus.hpp  logging_app_base.cpp  logging_app_base.hpp  logging_app_base.tpp  logging_facade.hpp  sim_app.cpp  sim_app.hpp  sim_app_base.cpp  sim_app_base.hpp  sim_app_base.tpp  sim_app_base_interface.hpp  sim_control.hpp  sim_data_logger.cpp  sim_data_logger.hpp  sim_manager.hpp  sim_manager.tpp  sim_single_run.hpp  sim_single_run.tpp  simulation.cpp  simulation.hpp  simulation.tpp
src/utilities/: yaml_utilities.hpp
tests/: CMakeLists.txt  run_unit_tests.sh  test_matrix.cpp  test_matrix2D.cpp  test_quaternion.cpp  test_rot_vec.cpp  test_transforms.cpp  test_vector.cpp
tests/hdf5_logging/: hdf5_logger_tests.cpp
tests/integrated_sim_and_logging/: helper_functions.hpp  sim_tests.cpp  test_logger.hpp  test_logging_config.yaml  test_sim_and_logger_config.yaml  test_sim_app_1.hpp  test_sim_config.yaml
tests/integrated_sim_and_logging/common_test_code/: file_path_helper_functions.hpp  helper_functions.cpp  helper_functions.hpp  test_data_bus.hpp  test_logger_1.hpp  test_logger_2.hpp  test_sim_app_1.hpp  test_sim_app_2.hpp
tests/integrated_sim_and_logging/test_1/: sim_test_1.cpp  sim_tests.cpp  test_1_sim_and_logger_config.yaml  test_logger.hpp  test_logger_1.hpp  test_sim_app_1.hpp
tests/integrated_sim_and_logging/test_2/: sim_test_2.cpp  test_2_sim_and_logger_config.yaml  test_logger_2.hpp
tests/math/: test_matrix.cpp  test_quaternion.cpp  test_rot_vec.cpp  test_transforms.cpp  test_vector.cpp
tests/simulation_framework/: sim_tests.cpp  test_RUN_00000.hdf5  test_data_bus.hpp  test_logger.hpp  test_logging_config.yaml  test_sim_app_1.hpp  test_sim_config.yaml
utilities/: yaml_utilities.hpp
(+47 files in other folders)
